--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 </head>
 <body>
     <h1>Hello from </h1>
+    <table>
+        <tr>
+            <td>Line 1</td>
+            <td>Line 2</td>
+        </tr>
+    </table>
 </body>
 </html>
