--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>This is my test file for Github.com</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <title>Bootcamp - Lecture 1</title>
 </head>
 <body>
-    <h1>Hello from </h1>
-    <table>
-        <tr>
-            <td>Line 1</td>
-            <td>Line 2</td>
-        </tr>
-    </table>
+    <main role="main" class="container">
+
+        <div class="starter-template">
+          <h1>Bootcamp - Lecture 1</h1>
+          <p class="lead">Hello Everyone,<br><br>
+            My name is Muhammad Burhan.<br>
+            <h6>Welcome to my first page on Github.com.</h6>
+          </p>
+        </div>
+      
+      </main><!-- /.container -->
 </body>
 </html>
